--- a/SCSS/components/_buttons.scss
+++ b/SCSS/components/_buttons.scss
@@ -3,4 +3,5 @@
     --bs-btn-bg: #632878; /* background boton */
     --bs-btn-hover-bg: #2a025e; /* background hover boton */
     --bs-btn-border-color: #141433; /* border color boton */
+    --bs-btn-active-bg: #141433;
 }
