--- a/views/contact.html
+++ b/views/contact.html
@@ -17,7 +17,7 @@
 
 <body class="bodycontenedor">
     <!-- INICIO HEADER -->
-    <header id="ir a arriba">
+    <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">*EMPRESA*</a>
