--- a/views/gallery.html
+++ b/views/gallery.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="bodycontenedor">
-    <header id="ir a arriba">
+    <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">*EMPRESA*</a>
@@ -51,7 +51,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="fondo">
         <h1>GALERIA</h1>
         <h2>imagenes de galeria</h2>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
@@ -97,15 +97,15 @@
         </div>
         <div>
             <section class="justify-content-center flex-wrap d-flex align-items-center">
-                <article class="">
+                <article>
                     <div class="galeria_imagenes">
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <iframe width="280" height="195" src="https://www.youtube.com/embed/0RF09-xH_48"
+                                    <iframe width="286" height="195" src="https://www.youtube.com/embed/0RF09-xH_48"
                                         title="Metal: Hellsinger - Gameplay Music video | PS5, PS4" frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen></iframe>
+                                        allowfullscreen style="margin: 0;"></iframe>
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>VID3</strong></h5>
                                         <p class="text-center card-text">
@@ -120,7 +120,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <iframe width="280" height="195" src="https://www.youtube.com/embed/u84hRUQlaio"
+                                    <iframe width="286" height="195" src="https://www.youtube.com/embed/u84hRUQlaio"
                                         title="Stray - Teaser Trailer | PS5" frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                         allowfullscreen></iframe>
@@ -137,7 +137,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18em;">
-                                    <iframe width="280" height="195" src="https://www.youtube.com/embed/1E051WtpyWg"
+                                    <iframe width="286" height="195" src="https://www.youtube.com/embed/1E051WtpyWg"
                                         title="Marvel's Spider-Man Remastered - PC Features Trailer I PC Games"
                                         frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -152,7 +152,6 @@
                 </article>
             </section>
         </div>
-        <br>
     </main>
     <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
