--- a/views/product.html
+++ b/views/product.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="bodycontenedor">
-    <header id="ir a arriba">
+    <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">*EMPRESA*</a>
@@ -52,7 +52,7 @@
         </nav>
     </header>
     <main>
-        <div>
+        <div class="fondo">
             <h1>Lista de productos</h1>
             <marquee behavior="scroll" direction="left">*aqui puede elegir nuestros productos*</marquee>
             <div>
@@ -99,107 +99,107 @@
                     </div>
                 </div>
             </section>
-        </div>
+            <div>
+                <div>
+                    <a class="btn btn-primary productos__menu" id="GPU" href="#!">Placas de video</a>
+                </div>
+                <section class="justify-content-center flex-wrap d-flex align-items-center">
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>PLACA DE VIDEO NVIDIA RTX 3060TI Zotac</strong>
+                                        </h5>
+                                        <p class="text-center card-text">
+                                            <a href="#" class="btn btn-primary productos__menu">Comprar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
+                                        </h5>
+                                        <a href="#" class="btn btn-primary productos__menu">Comprar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/placas de video/RX570.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>PLACA DE VIDEO AMD RADEON RX570 Asrock Phantom
+                                                Gaming</strong></h5>
+                                        <a href="#" class="btn btn-primary productos__menu">Comprar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div>
+                <div>
+                    <a class="btn btn-primary productos__menu" id="Perifericos" href="#!">Perifericos</a>
+                </div>
+                <section class="justify-content-center flex-wrap d-flex align-items-center">
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>TECLADO MECANICO REDRAGON VATA PRO SWITCHES
+                                                BROWN</strong> </h5>
+                                        <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>AURICULARES HYPER X CLOUD 2</strong></h5>
+                                        <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>MOUSE GAMING CORSAIR HARPOON</strong></h5>
+                                        <a href="#" class="btn btn-primary productos__menu">Comprar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
     </main>
-    </div>
-    <div>
-        <div>
-            <a class="btn btn-primary productos__menu" id="GPU" href="#!">Placas de video</a>
-        </div>
-        <section class="justify-content-center flex-wrap d-flex align-items-center">
-
-            <div class="galeria_imagenes">
-                <div class="row">
-                    <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>PLACA DE VIDEO NVIDIA RTX 3060TI Zotac</strong></h5>
-                                <p class="text-center card-text">
-                                    <a href="#" class="btn btn-primary productos__menu">Comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="galeria_imagenes">
-                <div class="row">
-                    <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
-                                </h5>
-                                <a href="#" class="btn btn-primary productos__menu">Comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="galeria_imagenes">
-                <div class="row">
-                    <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../Img/placas de video/RX570.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>PLACA DE VIDEO AMD RADEON RX570 Asrock Phantom
-                                        Gaming</strong></h5>
-                                <a href="#" class="btn btn-primary productos__menu">Comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-    <div>
-        <div>
-            <a class="btn btn-primary productos__menu" id="Perifericos" href="#!">Perifericos</a>
-        </div>
-        <section class="justify-content-center flex-wrap d-flex align-items-center">
-            <div class="galeria_imagenes">
-                <div class="row">
-                    <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top"
-                                alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>TECLADO MECANICO REDRAGON VATA PRO SWITCHES
-                                        BROWN</strong> </h5>
-                                <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="galeria_imagenes">
-                <div class="row">
-                    <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>AURICULARES HYPER X CLOUD 2</strong></h5>
-                                <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="galeria_imagenes">
-                <div class="row">
-                    <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 18rem;">
-                            <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title"><strong>MOUSE GAMING CORSAIR HARPOON</strong></h5>
-                                <a href="#" class="btn btn-primary productos__menu">Comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
     <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
