--- a/SCSS/components/_mediaquery.scss
+++ b/SCSS/components/_mediaquery.scss
@@ -6,8 +6,6 @@
         text-decoration: none;
     }
 
-
-
     /*------------------------------header----------------------------*/
     .header {
         color: aliceblue;
@@ -52,46 +50,31 @@
     /* ------------------------------ index main  ------------------------------ */
 
     .bodycontenedor {
-        background-color: $color_principal;
         font-family: 'Montserrat', sans-serif;
         color: aliceblue;
         text-align: center;
         display: grid;
         grid-template-rows: auto 1fr auto;
-        min-height: 100vh;
+        background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/media/giphy.gif);
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
-    .video-container {
-        position: relative;
-        padding-bottom: 56.25%;
-        padding-top: 30px;
-        height: 0;
-        overflow: hidden;
+    .body__text{
+        background-color: rgba(0, 0, 0, .6);
+        margin: 2em;
+        padding: 1em;
+        border-radius: 2.5em;
     }
 
-    .video-container iframe,
-    .video-container object,
-    .video-container embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+    .textos{
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 10px;
+        list-style-type: none;
     }
 
-    .fullscreen-video-wrap {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        overflow: hidden;
-    }
-
-    .fullscreen-video-wrap video {
-        min-height: 100%;
-        min-width: 100%;
-    }
 
     /* ------------------------------ index main ------------------------------ */
 
@@ -113,12 +96,19 @@
 
     .galeria_imagenes {
         margin: 3em;
+        color: black;
+    }
+    .card{
+        transition: transform 500ms ease-in-out;    
     }
 
     .card:hover {
-        transform: scale(1.05);
+        transform: scale(1.2);
         box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
     }
+
+
+    keyframes
 
     /*------------------------------galeria----------------------------*/
 
@@ -172,8 +162,6 @@
         text-align: center;
         width: 100%;
         border: 3px solid gray;
-
-
     }
 
     .footer__menu ul {
