--- a/SCSS/utilities/_normalize.scss
+++ b/SCSS/utilities/_normalize.scss
@@ -5,14 +5,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: $font-principal
-    
+    font-family: $font-principal;
 }
 
 
 body{
     font-family: $font-principal;
-    background: $color-principal;
+    background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/media/giphy.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 ul{
@@ -22,6 +23,5 @@ ul{
 a{
     text-decoration: none;
     font-family: $font-principal;
-    color: $text-color;
 }
 
