--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,6 @@
   font-family: 'Montserrat', sans-serif;
   color: aliceblue; }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style-type: none;
-  font-family: 'Montserrat', sans-serif;
-  color: #2f7bbd; }
-
 /* ------------------------------contactos--------------------------- */
 .contactos {
   display: grid;
@@ -101,7 +92,6 @@
   overflow-x: hidden; }
 
 .textos {
-  border: 10px solid #000026;
   padding: 10px;
   display: grid;
   grid-template-columns: 1fr;
@@ -112,34 +102,6 @@
   display: grid;
   grid-template-columns: 1fr;
   margin: 10px; }
-
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden; }
-
-.video-container iframe,
-.video-container object,
-.video-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
-
-.fullscreen-video-wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden; }
-
-.fullscreen-video-wrap video {
-  min-height: 100%;
-  min-width: 100%; }
 
 /* ------------------------------ index main ------------------------------ */
 /*------------------------------productos----------------------------*/
@@ -195,37 +157,25 @@
   /*------------------------------header----------------------------*/
   /* ------------------------------ index main  ------------------------------ */
   .bodycontenedor {
-    background-color: #000026;
     font-family: 'Montserrat', sans-serif;
     color: aliceblue;
     text-align: center;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    min-height: 100vh; }
-  .video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden; }
-  .video-container iframe,
-  .video-container object,
-  .video-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
-  .fullscreen-video-wrap {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden; }
-  .fullscreen-video-wrap video {
-    min-height: 100%;
-    min-width: 100%; }
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(/media/giphy.gif);
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .body__text {
+    background-color: rgba(0, 0, 0, 0.6);
+    margin: 2em;
+    padding: 1em;
+    border-radius: 2.5em; }
+  .textos {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 10px;
+    list-style-type: none; }
   /* ------------------------------ index main ------------------------------ */
   /*------------------------------galeria----------------------------*/
   .galeria {
@@ -238,13 +188,15 @@
     padding: 10px;
     margin: 10px; }
   .galeria_imagenes {
-    margin: 3em; }
+    margin: 3em;
+    color: black; }
+  .card {
+    transition: transform 500ms ease-in-out; }
   .card:hover {
-    transform: scale(1.05);
+    transform: scale(1.2);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06); }
-  /*------------------------------galeria----------------------------*/
-  /*------------------------------productos----------------------------*/
-  .productos {
+  keyframes
+.productos {
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -305,7 +257,8 @@
   --bs-btn-hover-bg: #2a025e;
   /* background hover boton */
   --bs-btn-border-color: #141433;
-  /* border color boton */ }
+  /* border color boton */
+  --bs-btn-active-bg: #141433; }
 
 * {
   margin: 0;
@@ -315,12 +268,13 @@
 
 body {
   font-family: "roboto";
-  background: #000026; }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(/media/giphy.gif);
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 ul {
   list-style: none; }
 
 a {
   text-decoration: none;
-  font-family: "roboto";
-  color: #331ba9; }
+  font-family: "roboto"; }
