--- a/SCSS/partials/_galeria.scss
+++ b/SCSS/partials/_galeria.scss
@@ -12,6 +12,11 @@
     border: 10px solid #141433;
     padding: 10px;
     margin: 10px;
+    
+}
+.galeria_imagenes {
+    margin: 3em;
+    color: black;
 }
 
 /*------------------------------galeria----------------------------*/
