--- a/SCSS/partials/_productos.scss
+++ b/SCSS/partials/_productos.scss
@@ -14,11 +14,18 @@
 }
 
 .productos__menu {
-
     padding: 1rem;
     border: 1rem;
     border-radius: 1rem;
     text-transform: uppercase;
 }
 
+.img__producto{
+    height: 260px;
+    width: 260px;
+}
+
+.card-body{
+    height: 160px;
+}
 /*------------------------------productos----------------------------*/
