--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -3,14 +3,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Roboto&display=swap");
 @import 'utilities/variables';
 @import 'base/reset';
-@import 'components/contactos';
-@import 'components/footer';
-@import 'components/galeria';
-@import 'components/header';
-@import 'components/indexpage';
-@import 'components/productos';
-@import 'components/mediaquery.scss';
-@import 'components/buttons';
+@import 'partials/contactos';
+@import 'partials/footer';
+@import 'partials/galeria';
+@import 'partials/header';
+@import 'partials/indexpage';
+@import 'partials/productos';
+@import 'partials/mediaquery.scss';
+@import 'partials/buttons';
 @import 'utilities/maps';
 @import 'utilities/mixins';
 @import 'utilities/normalize';
