--- a/views/about.html
+++ b/views/about.html
@@ -167,15 +167,15 @@
                             <a class="text-white" href="../index.html">Home</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/product.html">Productos</a>
+                            <a class="text-white" href="./product.html">Productos</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/contact.html">Contacto</a>
+                            <a class="text-white" href="./contact.html">Contacto</a>
                         </p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../views/gallery.html">galeria</a>
+                            <a class="text-white" href="./gallery.html">galeria</a>
                         </p>
                         <p>
                             <a class="text-white" href="./about.html">about</a>
