--- a/views/gallery.html
+++ b/views/gallery.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="./product.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=".contact.html">Contacto</a>
+                            <a class="nav-link" href="./contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about.html">sobre nosotros</a>
@@ -169,20 +169,20 @@
                             <a class="text-white" href="../index.html">Home</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/product.html">Productos</a>
+                            <a class="text-white" href="./product.html">Productos</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/contact.html">Contacto</a>
+                            <a class="text-white" href="./contact.html">Contacto</a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../views/gallery.html">galeria</a>
+                            <a class="text-white" href="./gallery.html">galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/about.html">about</a>
+                            <a class="text-white" href="./about.html">about</a>
                         </p>
                         <p>
                             <a class="text-white" href="#">boton arrepentimiento</a>
