--- a/views/product.html
+++ b/views/product.html
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
-                                <img src="../Img/Motherboards/imagen.png" class="card-img-top" alt="...">
+                                <img src="../Img/Motherboards/imagen.png" class="card-img-top img__producto" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>GIGABYTE B560 AORUS AX</strong></h5>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
@@ -76,7 +76,7 @@
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
-                                <img src="../Img/Motherboards/INTEL MOTHER.png" class="card-img-top" alt="...">
+                                <img src="../Img/Motherboards/INTEL MOTHER.png" class="card-img-top img__producto" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><STROng>Gigabyte B560 AORUS PRO AX</STROng></h5>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
@@ -89,7 +89,7 @@
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
-                                <img src="../Img/Motherboards/AMD MOTHER.jpg" class="card-img-top" alt="...">
+                                <img src="../Img/Motherboards/AMD MOTHER.jpg" class="card-img-top img__producto" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><STRong>GIGABYTE B660M AORUS PRO</STRong></h5>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
@@ -108,7 +108,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top" alt="...">
+                                    <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top img__producto" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>PLACA DE VIDEO NVIDIA RTX 3060TI Zotac</strong>
                                         </h5>
@@ -123,7 +123,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top" alt="...">
+                                    <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top img__producto" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
                                         </h5>
@@ -137,7 +137,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/placas de video/RX570.jpg" class="card-img-top" alt="...">
+                                    <img src="../Img/placas de video/RX570.jpg" class="card-img-top img__producto" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>PLACA DE VIDEO AMD RADEON RX570 Asrock Phantom
                                                 Gaming</strong></h5>
@@ -158,7 +158,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top"
+                                    <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top img__producto"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>TECLADO MECANICO REDRAGON VATA PRO SWITCHES
@@ -173,7 +173,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top"
+                                    <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top img__producto"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>AURICULARES HYPER X CLOUD 2</strong></h5>
@@ -187,7 +187,7 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top"
+                                    <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top img__producto"
                                         alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>MOUSE GAMING CORSAIR HARPOON</strong></h5>
@@ -219,12 +219,12 @@
                         </div>
                         <div>
                             <p>
-                                <a class="text-white" href="../views/product.html">Productos</a>
+                                <a class="text-white" href="./product.html">Productos</a>
                             </p>
                         </div>
                         <div>
                             <p>
-                                <a class="text-white" href="../views/contact.html">Contacto</a>
+                                <a class="text-white" href="./contact.html">Contacto</a>
                             </p>
                         </div>
                     </div>
@@ -232,10 +232,10 @@
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="../views/gallery.html">galeria</a>
+                            <a class="text-white" href="./gallery.html">galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="../views/about.html">about</a>
+                            <a class="text-white" href="./about.html">about</a>
                         </p>
                         <p>
                             <a class="text-white" href="#">boton arrepentimiento</a>
