--- a/SCSS/partials/_mediaquery.scss
+++ b/SCSS/partials/_mediaquery.scss
@@ -55,7 +55,7 @@
         text-align: center;
         display: grid;
         grid-template-rows: auto 1fr auto;
-        background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/media/giphy.gif);
+        background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(./media/giphy.gif);
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -108,7 +108,6 @@
     }
 
 
-    keyframes
 
     /*------------------------------galeria----------------------------*/
 
