--- a/SCSS/utilities/_normalize.scss
+++ b/SCSS/utilities/_normalize.scss
@@ -11,7 +11,7 @@
 
 body{
     font-family: $font-principal;
-    background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/media/giphy.gif);
+    background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(./media/giphy.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
