--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@
   padding: 10px;
   margin: 10px; }
 
+.galeria_imagenes {
+  margin: 3em;
+  color: black; }
+
 /*------------------------------galeria----------------------------*/
 /*------------------------------header----------------------------*/
 .header {
@@ -123,6 +127,13 @@
   border-radius: 1rem;
   text-transform: uppercase; }
 
+.img__producto {
+  height: 260px;
+  width: 260px; }
+
+.card-body {
+  height: 160px; }
+
 /*------------------------------productos----------------------------*/
 @media (min-width: 700px) {
   * {
@@ -162,7 +173,7 @@
     text-align: center;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(/media/giphy.gif);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(./media/giphy.gif);
     background-repeat: no-repeat;
     background-size: cover; }
   .body__text {
@@ -195,8 +206,9 @@
   .card:hover {
     transform: scale(1.2);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06); }
-  keyframes
-.productos {
+  /*------------------------------galeria----------------------------*/
+  /*------------------------------productos----------------------------*/
+  .productos {
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -268,7 +280,7 @@
 
 body {
   font-family: "roboto";
-  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(/media/giphy.gif);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(./media/giphy.gif);
   background-repeat: no-repeat;
   background-size: cover; }
 
